Fixed incorrect pathname resolution for embedding apps trying to load res:// URLs from places other than mozilla/bin b=42249, approved=warren